Better vertical centering + back button in album.html

--- a/server/html/album.html
+++ b/server/html/album.html
@@ -17,6 +17,8 @@
     <div id="container" class="container">
         <h1 class="text-center text-monospace" style='color: #EBEBEB; padding:10px;' >Neoframe control panel</h1>
 
+        <button type="button" onClick="location.href = '/';" class="btn btn-secondary btn-lg">Back</button>
+
         <h1 class="text-center text-monospace" style='color: #EBEBEB; padding:10px;' id="album">{ALBUM_NAME}</h1>
 
         <h2 class="text-center text-monospace" style='color: #EBEBEB; padding:10px;'>Set frame</h2>
@@ -41,7 +43,6 @@
 
         <h2 class="text-center text-monospace" style='color: #EBEBEB; padding:10px;'>Options</h2>
         <button type="button" onClick="random_mode('{ALBUM_NAME}')" class="btn btn-secondary btn-lg btn-block">Random</button>
-        <!-- <button type="button" class="btn btn-secondary btn-lg btn-block">???</button> -->
 
     </div>
 
